// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bunch Model removeTiles throws an error if there are less than number of requested tiles 1`] = `"The bunch has less than 4 tiles"`;

exports[`Bunch Model removeTiles throws an error if there is less than 1 requested tile 1`] = `"The bunch has less than 1 tile"`;

exports[`Bunch Model reset creates bunch with 3 tiles if shortened game 1`] = `
[
  {
    "id": "A1",
    "letter": "A",
  },
  {
    "id": "E1",
    "letter": "E",
  },
  {
    "id": "T1",
    "letter": "T",
  },
]
`;

exports[`Bunch Model reset generates tiles with multiplier of 1 when <= 4 players 1`] = `
[
  {
    "id": "A0",
    "letter": "A",
  },
  {
    "id": "A1",
    "letter": "A",
  },
  {
    "id": "B0",
    "letter": "B",
  },
  {
    "id": "B1",
    "letter": "B",
  },
  {
    "id": "B2",
    "letter": "B",
  },
  {
    "id": "B3",
    "letter": "B",
  },
  {
    "id": "B4",
    "letter": "B",
  },
]
`;

exports[`Bunch Model reset generates tiles with multiplier of 2 when > 4 players 1`] = `
[
  {
    "id": "A0",
    "letter": "A",
  },
  {
    "id": "A1",
    "letter": "A",
  },
  {
    "id": "A2",
    "letter": "A",
  },
  {
    "id": "A3",
    "letter": "A",
  },
  {
    "id": "B0",
    "letter": "B",
  },
  {
    "id": "B1",
    "letter": "B",
  },
  {
    "id": "B2",
    "letter": "B",
  },
  {
    "id": "B3",
    "letter": "B",
  },
  {
    "id": "B4",
    "letter": "B",
  },
  {
    "id": "B5",
    "letter": "B",
  },
  {
    "id": "B6",
    "letter": "B",
  },
  {
    "id": "B7",
    "letter": "B",
  },
  {
    "id": "B8",
    "letter": "B",
  },
  {
    "id": "B9",
    "letter": "B",
  },
]
`;

exports[`Bunch Model toJSON returns fields converted to JSON 1`] = `
[
  {
    "id": "A1",
    "letter": "A",
  },
]
`;
